<!--
  ~ Copyright (c) 2016.  Guaidaodl
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">番茄时钟</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Main Activity-->
    <string name="main_tab_timer">计时器</string>
    <string name="main_tab_todo_today">今日待办</string>
    <string name="main_tab_action_list">活动清单</string>
    <!--Main Menu-->
    <string name="action_statistic">统计数据</string>
    <string name="action_settings">设置</string>

    <!-- Timer Tab-->
    <string name="timer_start">开始</string>
    <string name="main_timer_stop">中断</string>
    <string name="main_timer_default_time">25:00</string>

    <!--Statistic-->
    <string name="statistics_label">统计数据</string>
    <string name="statistics_today">今天</string>
    <string name="statistics_week">本周</string>
    <string name="statistics_month">本月</string>

    <!--Notification-->
    <string name="notification_tomato_end_content_title">完成一个番茄</string>
    <string name="notification_tomato_end_content_text">休息一下吧</string>

    <string name="title_activity_timer">TimerActivity</string>
</resources>
